Fixing chrome bug with offscreen checkboxes.
USWDS moved the real checkboxes offscreen. When scrolled in our
interface, they didn't scroll offscreen, so when cehcking, our browser
woudl jump down to where they are offscreen.

Also made the accordian buttons type="button" so that the enter button
would click them.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,7 +71,12 @@
  }
 
  #sorn-fields input[type='checkbox']{
-   border-radius: 0 !important; 
+   border-radius: 0 !important;
+   position: relative !important;
+ }
+
+ .usa-checkbox {
+   height: 32px;
  }
 
  .usa-nav__secondary {
